# svplayer

./: README.md
android/svplayer/: settings.gradle
android/svplayer/app/: build.gradle
android/svplayer/app/src/main/: AndroidManifest.xml
android/svplayer/app/src/main/java/cxw/cn/svplayer/example/: BaseActivity.java  BaseFragment.java  MainActivity.java  MainApplication.java
android/svplayer/app/src/main/java/cxw/cn/svplayer/example/Fragments/: FileExplorerFragment.java
android/svplayer/app/src/main/java/cxw/cn/svplayer/example/activity/: FileExplorerActivity.java  UrlSampleActivity.java  VideoPlayerActivity.java
android/svplayer/app/src/main/java/cxw/cn/svplayer/example/adapter/: AdapterFilelist.java
android/svplayer/app/src/main/java/cxw/cn/svplayer/example/common/: FileUtils.java  LogUtils.java
android/svplayer/app/src/main/java/cxw/cn/svplayer/example/dialog/: ImageViewDialog.java
android/svplayer/app/src/main/java/cxw/cn/svplayer/example/widget/: IRenderView.java  MediaPlayerControlView.java  SurfaceViewRender.java  TextureViewRender.java
android/svplayer/app/src/main/res/drawable/: border.xml
android/svplayer/app/src/main/res/layout/: activity_base.xml  activity_main.xml  activity_videopaly.xml  filelist_item.xml  fragment_fileexplorer.xml  imageview.xml  widget_mediaplayercontrol.xml
android/svplayer/app/src/main/res/values/: colors.xml  dialog.xml  strings.xml
android/svplayer/svplayer-java/: build.gradle
android/svplayer/svplayer-java/src/main/: AndroidManifest.xml
android/svplayer/svplayer-java/src/main/java/cxw/cn/svplayer/: AudioTrackPlay.java  CommonSetting.java  GlRenderThread.java  IMediaPlayerControl.java  NativeRender.java  PlayerConstants.java  PlayerEventListener.java  SMediaPlayer.java  SVideoPlayer.java
android/svplayer/svplayer-java/src/main/java/cxw/cn/svplayer/common/: LogUtils.java
android/svplayer/svplayer-java/src/main/res/values/: strings.xml
svplayer/: CMakeLists.txt
svplayer/android/: AudioTrackOut.cpp  AudioTrackOut.h  CommonSetting_JniWrap.cpp  CommonSetting_JniWrap.h  GlShader.cpp  GlVideoRender.cpp  GlVideoRender.h  svideoplayer_jni.cpp  svideoplayer_jni.h
svplayer/src/: AudioOutBase.h  BufferQuene.h  Common.h  CommonSetting.cpp  CommonSetting.h  Log.h  PlayerEventObserver.h  SVideoPlayer.cpp  SVideoPlayer.h  VideoRenderBase.h
thirdparts/: build-ffmpeg.sh
